@@ -16,10 +16,10 @@
 
 package de.learnlib.alex.integrationtests.websocket;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.jayway.jsonpath.JsonPath;
 import de.learnlib.alex.integrationtests.resources.AbstractResourceIT;
@@ -29,16 +29,20 @@ import de.learnlib.alex.integrationtests.websocket.util.TestPresenceServiceWSMes
 import de.learnlib.alex.integrationtests.websocket.util.WebSocketUser;
 import de.learnlib.alex.websocket.entities.WebSocketMessage;
 import de.learnlib.alex.websocket.services.enums.TestPresenceServiceEnum;
+import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import javax.ws.rs.core.Response;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.awaitility.Awaitility;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class ATestPresenceServiceIT extends AbstractResourceIT {
+
+    private final Duration defaultWaitTime = Duration.ofSeconds(5);
 
     private WebSocketUser user1;
 
@@ -66,7 +70,20 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
 
     private TestPresenceServiceWSMessages testPresenceServiceWSMessages;
 
-    @Before
+    /**
+     * Scenario:
+     *
+     * - Three users: user1, user2, user3.
+     * - two projects: project1, project2.
+     * - user1 is owner of project1.
+     * - user2 is owner of project2.
+     * - user2 is member of project1.
+     * - user3 has no project.
+     * - user3 is not a member of any project.
+     *
+     * @throws Exception If something goes wrong.
+     */
+    @BeforeEach
     public void pre() throws Exception {
         user1 = new WebSocketUser("user1", client, port);
         user2 = new WebSocketUser("user2", client, port);
@@ -107,12 +124,13 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
         testId4 = JsonPath.read(res9.readEntity(String.class), "id");
     }
 
-    @After
+    @AfterEach
     @Override
     public void post() throws Exception {
-        user1.forceDisconnectAll();
-        user2.forceDisconnectAll();
-        user3.forceDisconnectAll();
+        List.of(user1, user2, user3).forEach(u -> {
+            u.clearMessagesInAllSessions();
+            u.forceDisconnectAll();
+        });
 
         super.post();
     }
@@ -120,25 +138,23 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
     @Test
     public void shouldAddTestLock() throws Exception {
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
-        final WebSocketMessage response = user1.getNextMessage("default");
+        final var response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
     }
 
     @Test
     public void shouldRemoveSymbolLock() throws Exception {
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
-        WebSocketMessage response = user1.getNextMessage("default");
-
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res1 = user1.getNextMessage("default");
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res1.getContent(), projectId1, testId1));
 
         user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
-        response = user1.getNextMessage("default");
-
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
+        final var res2 = user1.getNextMessage("default");
+        assertEquals("{}", JsonPath.read(res2.getContent(), "$.['" + projectId1 + "']").toString());
+        assertEquals("{}", JsonPath.read(res2.getContent(), "$.['" + projectId1 + "']").toString());
     }
 
     @Test
@@ -148,24 +164,24 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
         WebSocketMessage response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
-        Date oldTimestamp = new Date((long) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].timestamp"));
+        Date oldTimestamp = new Date(getTimestamp(response.getContent(), projectId1, testId1));
 
         user1.send("otherSession", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
         response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
         user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
         response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
-        Date newTimestamp = new Date((long) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].timestamp"));
+        Date newTimestamp = new Date(getTimestamp(response.getContent(), projectId1, testId1));
 
         assertTrue(oldTimestamp.before(newTimestamp));
     }
@@ -177,26 +193,25 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
         WebSocketMessage response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
         user1.send("otherSession", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
         response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
         user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
         response = user1.getNextMessage("default");
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        assertTrue(getLocks(response.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(response.getContent(), projectId1, testId1));
 
         user1.send("otherSession", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
         response = user1.getNextMessage("default");
 
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
+        assertEquals("{}", getProjectAsString(response.getContent(), projectId1));
     }
 
     @Test
@@ -209,22 +224,28 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
         user2.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId3));
         user2.send("otherSession", testPresenceServiceWSMessages.userEnteredTest(projectId2, testId4));
 
-        user2.clearMessages("default");
+        final var sessions = List.of("default", "otherSession");
+        Awaitility.await().atMost(defaultWaitTime).until(() ->
+                user1.assertNumberOfMessages(sessions, List.of(3, 3))
+                        && user2.assertNumberOfMessages(sessions, List.of(4, 4)));
+
+        user1.clearMessagesInAllSessions();
+        user2.clearMessagesInAllSessions();
 
         user2.send("default", testPresenceServiceWSMessages.requestStatus(Arrays.asList((long) projectId1, (long) projectId2)));
-        final WebSocketMessage response = user2.getNextMessage("default");
+        final var content = user2.getNextMessage("default").getContent();
 
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user2"));
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId2 + "'].locks")).contains("user2"));
-        assertFalse(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId2 + "'].locks")).contains("user1"));
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId2 + "'].['" + testSuiteId3 + "'].locks")).contains("user2"));
-        assertFalse(((List) JsonPath.read(response.getContent(), "$.['" + projectId2 + "'].['" + testSuiteId3 + "'].locks")).contains("user1"));
+        assertTrue(getLocks(content, projectId1, testSuiteId1).contains("user1"));
+        assertTrue(getLocks(content, projectId1, testSuiteId1).contains("user2"));
+        assertTrue(getLocks(content, projectId1, testSuiteId2).contains("user2"));
+        assertFalse(getLocks(content, projectId1, testSuiteId2).contains("user1"));
+        assertTrue(getLocks(content, projectId2, testSuiteId3).contains("user2"));
+        assertFalse(getLocks(content, projectId2, testSuiteId3).contains("user1"));
 
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId2 + "'].username"));
-        assertEquals("user2", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId3 + "'].username"));
-        assertEquals("user2", JsonPath.read(response.getContent(), "$.['" + projectId2 + "'].['" + testId4 + "'].username"));
+        assertEquals("user1", getUsername(content, projectId1, testId1));
+        assertEquals("user1", getUsername(content, projectId1, testId2));
+        assertEquals("user2", getUsername(content, projectId1, testId3));
+        assertEquals("user2", getUsername(content, projectId2, testId4));
     }
 
     @Test
@@ -237,82 +258,81 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
         user2.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId3));
         user2.send("otherSession", testPresenceServiceWSMessages.userEnteredTest(projectId2, testId4));
 
+        final var sessions = List.of("default", "otherSession");
+        Awaitility.await().atMost(defaultWaitTime).until(() ->
+                user1.assertNumberOfMessages(sessions, List.of(3, 3))
+                        && user2.assertNumberOfMessages(sessions, List.of(4, 4)));
+
         user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
         user1.send("otherSession", testPresenceServiceWSMessages.userLeftTest(projectId1, testId2));
         user2.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId3));
         user2.send("otherSession", testPresenceServiceWSMessages.userLeftTest(projectId2, testId4));
 
-        user2.clearMessages("default");
-        user2.send("default", testPresenceServiceWSMessages.requestStatus(Arrays.asList((long) projectId1, (long) projectId2)));
-        final WebSocketMessage response = user2.getNextMessage("default");
+        Awaitility.await().atMost(defaultWaitTime).until(() ->
+                user1.assertNumberOfMessages(sessions, List.of(6, 6))
+                        && user2.assertNumberOfMessages(sessions, List.of(8, 8)));
 
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId2 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId2 + "']").toString());
+        user1.clearMessagesInAllSessions();
+        user2.clearMessagesInAllSessions();
+        user2.send("default", testPresenceServiceWSMessages.requestStatus(Arrays.asList((long) projectId1, (long) projectId2)));
+        final var response = user2.getNextMessage("default");
+
+        assertEquals("{}", getProjectAsString(response.getContent(), projectId1));
+        assertEquals("{}", getProjectAsString(response.getContent(), projectId2));
     }
 
     @Test
     public void shouldProcessSessionDisconnect() throws Exception {
         user2.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user2"));
-        assertEquals("user2", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res1 = user1.getNextMessage("default");
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user2"));
+        assertEquals("user2", getUsername(res1.getContent(), projectId1, testId1));
 
         user2.forceDisconnect("default");
-        response = user1.getNextMessage("default");
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
+        final var res2 = user1.getNextMessage("default");
+        assertEquals("{}", getProjectAsString(res2.getContent(), projectId1));
     }
 
     @Test
     public void shouldIgnoreDuplicateEnteredMessage() throws Exception {
-        user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
+        final var res1 = user1.sendAndReceive("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res1.getContent(), projectId1, testId1));
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
-
-        user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
-        response = user1.getNextMessage("default");
-        assertNull(response);
+        final var res2 = user1.sendAndReceive("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
+        assertNull(res2);
     }
 
     @Test
     public void shouldIgnoreDuplicateLeftMessage() throws Exception {
-        user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
+        final var res1 = user1.sendAndReceive("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res1.getContent(), projectId1, testId1));
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res2 = user1.sendAndReceive("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
+        assertEquals("{}", getProjectAsString(res2.getContent(), projectId1));
 
-        user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
-        response = user1.getNextMessage("default");
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-
-        user1.send("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
-        response = user1.getNextMessage("default");
-        assertNull(response);
+        final var res3 = user1.sendAndReceive("default", testPresenceServiceWSMessages.userLeftTest(projectId1, testId1));
+        assertNull(res3);
     }
 
     @Test
     public void shouldSwitchSymbolLock() throws Exception {
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res1 = user1.getNextMessage("default");
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res1.getContent(), projectId1, testId1));
 
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId2));
-        response = user1.getNextMessage("default");
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
-        assertEquals("{}", JsonPath.read(response.getContent(), "$.['" + projectId1 + "']").toString());
+        final var res2 = user1.getNextMessage("default");
+        assertEquals("{}", getProjectAsString(res2.getContent(), projectId1));
+        assertEquals("{}", getProjectAsString(res2.getContent(), projectId1));
 
-        response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId2 + "'].username"));
+        final var res3 = user1.getNextMessage("default");
+        assertTrue(getLocks(res3.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res3.getContent(), projectId1, testId2));
     }
 
     @Test
@@ -321,71 +341,86 @@ public class ATestPresenceServiceIT extends AbstractResourceIT {
 
         user1.send("default", testPresenceServiceWSMessages.userEnteredTest(projectId1, testId1));
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res1 = user1.getNextMessage("default");
+        assertTrue(getLocks(res1.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res1.getContent(), projectId1, testId1));
 
-        response = user2.getNextMessage("default");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res2 = user2.getNextMessage("default");
+        assertTrue(getLocks(res2.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res2.getContent(), projectId1, testId1));
 
-        response = user2.getNextMessage("otherSession");
-        assertTrue(((List) JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testSuiteId1 + "'].locks")).contains("user1"));
-        assertEquals("user1", JsonPath.read(response.getContent(), "$.['" + projectId1 + "'].['" + testId1 + "'].username"));
+        final var res3 = user2.getNextMessage("otherSession");
+        assertTrue(getLocks(res3.getContent(), projectId1, testSuiteId1).contains("user1"));
+        assertEquals("user1", getUsername(res3.getContent(), projectId1, testId1));
 
-        response = user3.getNextMessage("default");
-        assertNull(response);
+        final var res4 = user3.getNextMessage("default");
+        assertNull(res4);
     }
 
     @Test
     public void shouldNotSendProjectStatusToUnauthorizedUser() throws Exception {
-        user3.send("default", testPresenceServiceWSMessages.requestStatus(Collections.singletonList((long) projectId1)));
-
-        final WebSocketMessage response = user3.getNextMessage("default");
-        assertEquals("You are not allowed to access the project.", JsonPath.read(response.getContent(), "$.description"));
+        final var message = testPresenceServiceWSMessages.requestStatus(Collections.singletonList((long) projectId1));
+        final var response = user3.sendAndReceive("default", message);
+        assertEquals("You are not allowed to access the project.", getDescription(response.getContent()));
     }
 
     @Test
     public void shouldRejectMalformedContentInStatusRequestMessage() throws Exception {
-        final WebSocketMessage badMessage = new WebSocketMessage();
+        final var badMessage = new WebSocketMessage();
         badMessage.setEntity(TestPresenceServiceEnum.TEST_PRESENCE_SERVICE.name());
         badMessage.setType(TestPresenceServiceEnum.STATUS_REQUEST.name());
         badMessage.setContent("malformed content");
-        user1.send("default", badMessage);
 
-        final WebSocketMessage response = user1.getNextMessage("default");
-        assertEquals("Received malformed content.", JsonPath.read(response.getContent(), "$.description"));
+        final var response = user1.sendAndReceive("default", badMessage);
+        assertEquals("Received malformed content.", getDescription(response.getContent()));
     }
 
     @Test
     public void shouldRejectMalformedContentInUserEnteredMessage() throws Exception {
-        WebSocketMessage badMessage = new WebSocketMessage();
+        final var badMessage = new WebSocketMessage();
         badMessage.setEntity(TestPresenceServiceEnum.TEST_PRESENCE_SERVICE.name());
         badMessage.setType(TestPresenceServiceEnum.USER_ENTERED.name());
         badMessage.setContent("malformed content");
-        user1.send("default", badMessage);
 
-        WebSocketMessage response = user1.getNextMessage("default");
-        assertEquals("Received malformed content.", JsonPath.read(response.getContent(), "$.description"));
+        final var response = user1.sendAndReceive("default", badMessage);
+        assertEquals("Received malformed content.", getDescription(response.getContent()));
     }
 
     @Test
     public void shouldRejectMalformedContentInUserLeftMessage() throws Exception {
-        final WebSocketMessage badMessage = new WebSocketMessage();
+        final var badMessage = new WebSocketMessage();
         badMessage.setEntity(TestPresenceServiceEnum.TEST_PRESENCE_SERVICE.name());
         badMessage.setType(TestPresenceServiceEnum.USER_LEFT.name());
         badMessage.setContent("malformed content");
-        user1.send("default", badMessage);
 
-        final WebSocketMessage response = user1.getNextMessage("default");
-        assertEquals("Received malformed content.", JsonPath.read(response.getContent(), "$.description"));
+        final var response = user1.sendAndReceive("default", badMessage);
+        assertEquals("Received malformed content.", getDescription(response.getContent()));
     }
 
     @Test
     public void shouldRejectStatusRequestWithNonExistentProject() throws Exception {
-        user1.send("default", testPresenceServiceWSMessages.requestStatus(Collections.singletonList(-1L)));
+        final var message = testPresenceServiceWSMessages.requestStatus(Collections.singletonList(-1L));
+        final var response = user1.sendAndReceive("default", message);
+        assertEquals("Project with id -1 not found.", getDescription(response.getContent()));
+    }
 
-        final WebSocketMessage response = user1.getNextMessage("default");
-        assertEquals("Project with id -1 not found.", JsonPath.read(response.getContent(), "$.description"));
+    private List<String> getLocks(String content, int projectId, int testId) {
+        return JsonPath.read(content, "$.['" + projectId + "'].['" + testId + "'].locks");
+    }
+
+    private String getUsername(String content, int projectId, int testId) {
+        return JsonPath.read(content, "$.['" + projectId + "'].['" + testId + "'].username");
+    }
+
+    private Long getTimestamp(String content, int projectId, int testId) {
+        return JsonPath.read(content, "$.['" + projectId + "'].['" + testId + "'].timestamp");
+    }
+
+    private String getProjectAsString(String content, int projectId) {
+        return JsonPath.read(content, "$.['" + projectId + "']").toString();
+    }
+    
+    private String getDescription(String content) {
+        return JsonPath.read(content, "$.description");
     }
 }
